styled and updated home page
added some styles and more content to home page in the "about" section

--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -29,15 +29,35 @@
             <h2>Our Values</h2>
             <div class="home-card">
                 <h3>Quality Assurance</h3>
-            <p> </p>
+            <p>
+                At Herbal Harbor, we meticulously source the finest tea leaves from trusted
+                growers worldwide. Our commitment to quality extends to every step of the process,
+                from harvesting to packaging. We conduct rigorous tests to ensure our teas meet
+                the highest standards, resulting in a premium and delightful tea-drinking
+                experience for our valued customers.
+            </p>
             </div>
             <div class="home-card">
                 <h3>Customer Experience</h3>
-            <p> </p>
+            <p>
+                At Herbal Harbor, our customers are at the heart of everything we do. We strive to
+                provide a seamless and enjoyable shopping journey, from the moment you browse our
+                selection to the final sip of your chosen blend. Our dedicated support team is
+                always ready to assist, ensuring your satisfaction and delight with every
+                interaction. We value your feedback and continuously work to enhance your Herbal
+                Harbor experience.
+            </p>
             </div>
             <div class="home-card">
                 <h3>Flavor Innovation</h3>
-            <p> </p>
+            <p>
+                At Herbal Harbor, we pride ourselves on our dedication to crafting unique and
+                captivating tea blends. Our team of expert blenders constantly explores new
+                combinations, sourcing the finest ingredients to create flavors that excite and
+                delight the palate. We believe in pushing the boundaries of traditional tea,
+                offering our customers an array of bold and inventive tastes that redefine their
+                tea-drinking experience.
+            </p>
             </div>
         </section>
         <section class="home-featured">
