--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -63,11 +63,23 @@
         <section class="home-featured">
             <!--FEATURED DRINKS-->
             <h2>What's Popular</h2>
-            <ul>
-                <li>Chai Tea with Milk</li>
-                <li>Matcha Green Tea</li>
-                <li>Thai Iced Tea</li>
-            </ul>
+            <div class="tea-container">
+                <div class="tea-card">
+                    <img src="images/chai_tea.png" alt="Milk Chai Tea">
+                    <h3>Chai Tea with Milk</h3>
+                    <p></p>
+                </div>
+                <div class="tea-card">
+                    <img src="images/matcha_green_tea.png" alt="Matcha Green Tea">
+                    <h3>Matcha Green Tea</h3>
+                    <p></p>
+                </div>
+                <div class="tea-card">
+                    <img src="images/thai_tea.png" alt="Thai Iced Tea">
+                    <h3>Thai Iced Tea</h3>
+                    <p></p>
+                </div>
+            </div>
         </section>
         <!--NEWSLETTER SIGNUP-->
         <section class="home-signup">
