touched up website
added more content within cards in home page, and updated background colors for entire website as well as the buttons on the product cards. Also changed styling in general for product cards.

--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -67,17 +67,32 @@
                 <div class="tea-card">
                     <img src="images/chai_tea.png" alt="Milk Chai Tea">
                     <h3>Chai Tea with Milk</h3>
-                    <p></p>
+                    <p>
+                        Our Chai Tea is a captivating blend of robust black tea and aromatic spices.
+                        Simmered to perfection, it's a comforting and invigorating treat with notes
+                        of cinnamon, ginger, cardamom, and cloves. Experience the essence of
+                        traditional Indian chai in every sip
+                    </p>
                 </div>
                 <div class="tea-card">
                     <img src="images/matcha_green_tea.png" alt="Matcha Green Tea">
                     <h3>Matcha Green Tea</h3>
-                    <p></p>
+                    <p>
+                        Elevate your senses with our Matcha Green Tea. This vibrant powder is crafted
+                        from shade-grown tea leaves, ground to perfection. Its intense, earthy flavor
+                        is a testament to its rich heritage. Experience a harmonious balance of energy
+                        and tranquility with every sip.
+                    </p>
                 </div>
                 <div class="tea-card">
                     <img src="images/thai_tea.png" alt="Thai Iced Tea">
                     <h3>Thai Iced Tea</h3>
-                    <p></p>
+                    <p>
+                        Dive into a world of bold flavors with our Thai Iced Tea. This exotic blend
+                        of strong black tea, spices, and sweetened condensed milk creates a symphony
+                        of taste sensations. Served over ice, it's a refreshing and creamy delight,
+                        perfect for sipping on a sunny afternoon.
+                    </p>
                 </div>
             </div>
         </section>
