--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -60,11 +60,11 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h2>See All Teas</h2>
+            <h3>See All Teas</h3>
         </section>
 
         <section class="product-seasonal">
-            <h2>Seasoanl Teas</h2>
+            <h2>Seasonal Teas</h2>
             <div class="tea-container">
                 <div class="tea-card">
                     <img src="images/chai_tea.png" alt="Chai Tea">
@@ -100,7 +100,7 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h2>See All Seasonal Teas</h2>
+            <h3>See All Seasonal Teas</h3>
         </section>
 
         <section class="product-herbal">
@@ -143,7 +143,7 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h2>See All Herbal Teas</h2>
+            <h3>See All Herbal Teas</h3>
         </section>
 
         <section class="product-milk">
@@ -184,7 +184,7 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h2>See All Milk Teas</h2>
+            <h3>See All Milk Teas</h3>
         </section>
 
         <section class="product-contact">
