updated about page
Added content to about page, and styled it to give it structure... Still needs to be touched up.

--- a/Herbal Harbor/about.html
+++ b/Herbal Harbor/about.html
@@ -28,16 +28,27 @@
                     <img src="images/first_teas.png" alt="Picture Of First Tea's">
                 </div>
                 <div class="column">
-                    <h2>Our History</h2>
-                    <p>Start our story</p>
+                    <h2>Our History: Sipping Memories Together</h2>
+                    <p>
+                        In the cozy kitchens of our founder's home, Herbal Harbor sprouted from a
+                        simple desire to create moments of warmth and connection. Starting with
+                        small batches shared among close friends and family, our teas quickly gained
+                        a reputation for their inviting aromas and comforting flavors.
+                    </p>
                 </div>
             </div>
         </section>
         <section class="about-evolution">
             <div class="row">
                 <div class="column">
-                    <h2>Our Evolution</h2>
-                    <p>Describe company success/adaptations</p>
+                    <h2>Our Evolution: From Stalls to Storefronts</h2>
+                    <p>
+                        With hearts full of gratitude and a growing community of tea enthusiasts, we
+                        set up stalls at local events, where each cup became a conversation starter.
+                        The demand grew, and soon, we unveiled the first Herbal Harbor store,
+                        nestled in the heart of our cherished community. This marked a milestone in
+                        our journey, a testament to the power of shared moments over a cup of tea.
+                    </p>
                 </div>
                 <div class="column">
                     <img src="images/variety_teas.jpg" alt="Picture Of New Tea's">
@@ -50,8 +61,15 @@
                     <img src="" alt="">
                 </div>
                 <div class="column">
-                    <h2>Our Future</h2>
-                    <p>Share our vision/goals</p>
+                    <h2>Our Future: Steeping Towards Tomorrow</h2>
+                    <p>
+                        As we look ahead, our commitment to quality and connection remains
+                        unwavering. We envision a future where Herbal Harbor becomes synonymous
+                        with exceptional teas that touch lives and warm hearts. With plans to
+                        expand our offerings and reach even more tea lovers around the world, we
+                        invite you to be a part of this exciting chapter. Together, let's brew a
+                        legacy of flavor, community, and cherished memories.
+                    </p>
                 </div>
             </div>
         </section>
