--- a/Herbal Harbor/contact.html
+++ b/Herbal Harbor/contact.html
@@ -24,16 +24,14 @@
         </header>
         <section class="contact">
             <h2>Contact Us</h2>
-            <form>
+            <p>Have any questions, concerns, or problems? Feel free to reach out!</p>
+            <form action="/contact" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
-
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required><br><br>
-
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="5" cols="40" required></textarea>
-
                 <input type="submit" value="Submit">
             </form>
         </section>
