--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -98,13 +98,16 @@
         </section>
         <!--NEWSLETTER SIGNUP-->
         <section class="home-signup">
-            <h2>Get The Latest News & Offers</h2>
-            <form action="/subscribe" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
-                <label for="name">Email:</label>
-                <input type="email" id="email" name="email" required><br>
-            </form>
+            <div class="signup-container">
+                <h2>Get The Latest News & Offers</h2>
+                <form action="/subscribe" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required><br>
+                    <label for="name">Email:</label>
+                    <input type="email" id="email" name="email" required><br>
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
         </section>
         <!--SOCIAL LINKS MENU-->
         <footer>
