finished styling contact
finished styling contact page and updated some of the html on the page

--- a/Herbal Harbor/contact.html
+++ b/Herbal Harbor/contact.html
@@ -31,8 +31,8 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required><br><br>
                 <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" cols="40" required></textarea>
-                <input type="submit" value="Submit">
+                <textarea id="message" name="message" rows="5" required></textarea>
+                <button type="submit">Send Message</button>
             </form>
         </section>
         <footer>
