--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -20,6 +20,9 @@
                     <li><a href="reviews.html">Reviews</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
+                <div id="cart-icon">
+                    <img src="images/cart.png" alt="Shopping Cart Icon">
+                </div>
             </div>
         </header>
 
@@ -35,18 +38,18 @@
                         of cinnamon, ginger, cardamom, and cloves. Experience the essence of
                         traditional Indian chai in every sip
                     </p>
-                    <button class="atc-button">Add To Cart</button>
+                    <button class="atc-button" data-name="Chai Tea" data-price="5.99">Add To Cart</button>
                 </div>
                 <div class="tea-card">
                     <img src="images/matcha_green_tea.png" alt="Matcha Green Tea">
-                    <h3>Green Tea</h3>
+                    <h3>Matcha Green Tea</h3>
                     <p>
                         Elevate your senses with our Matcha Green Tea. This vibrant powder is crafted
                         from shade-grown tea leaves, ground to perfection. Its intense, earthy flavor
                         is a testament to its rich heritage. Experience a harmonious balance of energy
                         and tranquility with every sip.
                     </p>
-                    <button class="atc-button">Add To Cart</button>
+                    <button class="atc-button" data-name="Matcha Green Tea" data-price="5.99">Add To Cart</button>
                 </div>
                 <div class="tea-card">
                     <img src="images/thai_tea.png" alt="Thai Iced Tea">
