removed content from products
Removed entire 'Popular' drinks section from products page and also all h3 tags with 'See All Teas' written in them. That way I can make the whole products page just the small amount of drinks that I have, and also have a checkout button in the bottom of the page which will be displaying the total.

--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js"></script>
     </head>
 
     <body>
@@ -21,50 +22,10 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
                 <div id="cart-icon">
-                    <img src="images/cart.png" alt="Shopping Cart Icon">
+                    <img id="cart-icon" src="images/cart.png" alt="Shopping Cart Icon">
                 </div>
             </div>
         </header>
-
-        <section class="product-popular">
-            <h2>Popular Teas</h2>
-            <div class="tea-container">
-                <div class="tea-card">
-                    <img src="images/chai_tea.png" alt="Chai Tea">
-                    <h3>Chai Tea</h3>
-                    <p>
-                        Our Chai Tea is a captivating blend of robust black tea and aromatic spices.
-                        Simmered to perfection, it's a comforting and invigorating treat with notes
-                        of cinnamon, ginger, cardamom, and cloves. Experience the essence of
-                        traditional Indian chai in every sip
-                    </p>
-                    <button class="atc-button" data-name="Chai Tea" data-price="5.99">Add To Cart</button>
-                </div>
-                <div class="tea-card">
-                    <img src="images/matcha_green_tea.png" alt="Matcha Green Tea">
-                    <h3>Matcha Green Tea</h3>
-                    <p>
-                        Elevate your senses with our Matcha Green Tea. This vibrant powder is crafted
-                        from shade-grown tea leaves, ground to perfection. Its intense, earthy flavor
-                        is a testament to its rich heritage. Experience a harmonious balance of energy
-                        and tranquility with every sip.
-                    </p>
-                    <button class="atc-button" data-name="Matcha Green Tea" data-price="5.99">Add To Cart</button>
-                </div>
-                <div class="tea-card">
-                    <img src="images/thai_tea.png" alt="Thai Iced Tea">
-                    <h3>Thai Iced Tea</h3>
-                    <p>
-                        Dive into a world of bold flavors with our Thai Iced Tea. This exotic blend
-                        of strong black tea, spices, and sweetened condensed milk creates a symphony
-                        of taste sensations. Served over ice, it's a refreshing and creamy delight,
-                        perfect for sipping on a sunny afternoon.
-                    </p>
-                    <button class="atc-button">Add To Cart</button>
-                </div>
-            </div>
-            <h3>See All Teas</h3>
-        </section>
 
         <section class="product-seasonal">
             <h2>Seasonal Teas</h2>
@@ -103,7 +64,6 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h3>See All Seasonal Teas</h3>
         </section>
 
         <section class="product-herbal">
@@ -146,7 +106,6 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h3>See All Herbal Teas</h3>
         </section>
 
         <section class="product-milk">
@@ -187,7 +146,6 @@
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
-            <h3>See All Milk Teas</h3>
         </section>
 
         <section class="product-contact">
