Updated Products Page
updated html code in products by adding a checkout section in the bottom in which users can see their items and their total.

--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -148,8 +148,12 @@
             </div>
         </section>
 
-        <section class="product-contact">
-            <!---->
+        <section class="product-checkout">
+            <h2>Checkout</h2>
+            <div id="cart-contents">
+                <!-- CART ITEMS WILL BE DISPLAYED HERE USING JAVASCRIPT -->
+            </div>
+            <button id="checkout-button">Proceed to Checkout</button>
         </section>
         <footer>
             <div class="footer-container">
