starting new project E-Commerce
Starting a new project today January 12, 2024. This project will be a template and a start to my e-commerce website as well as an addition to my portfolio!

--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -39,7 +39,7 @@
                         of cinnamon, ginger, cardamom, and cloves. Experience the essence of
                         traditional Indian chai in every sip.
                     </p>
-                    <button class="atc-button">Add To Cart</button>
+                    <button class="atc-button" data-name="Chai Tea" data-price="$5.99">Add To Cart</button>
                 </div>
                 <div class="tea-card">
                     <img src="images/orange_cider_tea.png" alt="Orange Cider Tea">
